--- a/src/index/Makefile
+++ b/src/index/Makefile
@@ -2,5 +2,7 @@ obj += src/index/base.o
 obj += src/index/dummy.o
 obj += src/index/hash.o
 obj += src/index/tree.o
+obj += src/index/twltree.o
 obj += src/index/ordering.o
 obj += third_party/qsort_arg.o
+obj += third_party/twltree/twltree.o
