unify all tree indexes (and a bit of hash index)

--- a/src/index/Makefile
+++ b/src/index/Makefile
@@ -2,7 +2,8 @@ obj += src/index/base.o
 obj += src/index/dummy.o
 obj += src/index/hash.o
 obj += src/index/tree.o
+obj += src/index/sptree.o
 obj += src/index/twltree.o
-obj += src/index/ordering.o
+obj += src/index/common.o
 obj += third_party/qsort_arg.o
 obj += third_party/twltree/twltree.o
