--- a/src/Makefile
+++ b/src/Makefile
@@ -19,6 +19,7 @@ obj += src/errcode.o
 obj += src/spawn_child.o
 
 obj-log-io += src/log_io.o
+obj-log-io += src/log_io_reader.o
 obj-log-io += src/log_io_writers.o
 obj-log-io += src/log_io_recovery.o
 obj-log-io += src/log_io_puller.o
