--- a/src/Makefile
+++ b/src/Makefile
@@ -20,6 +20,7 @@ obj += src/spawn_child.o
 
 obj-log-io += src/log_io.o
 obj-log-io += src/log_io_reader.o
+obj-log-io += src/log_io_remote.o
 obj-log-io += src/log_io_writers.o
 obj-log-io += src/log_io_recovery.o
 obj-log-io += src/log_io_puller.o
