--- a/include/config.h.in
+++ b/include/config.h.in
@@ -190,6 +190,9 @@
 /* Define to 1 if you have the <valgrind/valgrind.h> header file. */
 #undef HAVE_VALGRIND_VALGRIND_H
 
+/* Define to 1 if you have the <linux/falloc.h> header file. */
+#undef HAVE_LINUX_FALLOC_H
+
 /* Define to 1 if the C compiler supports __attribute__((cold)) */
 #undef HAVE__ATTRIBUTE_COLD
 
