POSTREE - nihtree - tree with position

--- a/src/index/Makefile
+++ b/src/index/Makefile
@@ -4,6 +4,8 @@ obj += src/index/hash.o
 obj += src/index/tree.o
 obj += src/index/sptree.o
 obj += src/index/twltree.o
+obj += src/index/nihtree.o
 obj += src/index/common.o
 obj += third_party/qsort_arg.o
 obj += third_party/twltree/twltree.o
+obj += third_party/nihtree/nihtree.o
