add onlineconf, delete ckv

--- a/cfg/Makefile
+++ b/cfg/Makefile
@@ -2,6 +2,10 @@ obj += cfg/warning.o
 obj += cfg/prscfg.o
 obj += cfg/octopus.o
 
+ifneq ($(findstring src/onlineconf.o,$(obj)),)
+  cfg_tmpl += cfg/onlineconf.cfg_tmpl
+endif
+
 no-extra-warns += cfg/octopus.o
 no-extra-warns += cfg/prscfg.o
 # no warns at all: it complains even with -Wall
